solved rwd issue
width of SH container was wrongly inherited

--- a/assets/scss/base/_layout.scss
+++ b/assets/scss/base/_layout.scss
@@ -1,5 +1,25 @@
 /* CSS Document - FRONT-END */
 
+
+/* ====================================================================================== */
+/*  RESPONSIVE STICKY FOOTER (add class .block to footer) =============================== */
+/* ====================================================================================== */
+
+/*
+html, body {
+	height: 100%;
+	}
+#container {
+	display: table;
+	height: 100%;
+	width:100%;
+	}
+.block {
+	display: table-row;
+	height: 1px;
+	}
+*/	
+	
 /* ====================================================================================================================== */
 /* MACRO LAYOUT                                                                                                           */
 /* ====================================================================================================================== */
