--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -7,22 +7,11 @@
 /* @import "compass/css3"; */
 
 
-/* RESET */
-@import "base/reset";
-
-
-/* SASS */
-@import "sass/sass";
-
-
 /* BASE */
+@import "base/reset";
+@import "base/sass";
 @import "base/typography";
-
-
-/* LAYOUT */
-@import "layout/sticky_footer";
-@import "layout/macro_layout";
-
+@import "base/layout";
 
 /* COMPONENTS */
 @import "components/header";
