--- a/assets/scss/base/_sass_style.scss
+++ b/assets/scss/base/_sass_style.scss
@@ -54,38 +54,6 @@ $color5: #c5cadb; /* light blue */
 
 
 
-/* 
- * VARIABLES - Break-points
- */
-
-/*
-$bpBig: 1024px;
-$bpMedium: 800px;
-$bpSmall: 599px;
-*/
-
-$bp_l: 1024px;
-$bp_m: 800px;
-$bp_s: 599px;
-
-
-
-
-/* 
- * VARIABLES - Spacing
- */
-
-$spacing: 24px;
-$spacing2: $spacing * 2;
-$spacing3: $spacing * 3;
-$spacing4: $spacing * 4;
-$spacing6: $spacing * 6;
-$spacing8: $spacing * 8;
-$spacing075: $spacing * 0.75;
-$spacing05: $spacing * 0.5;
-$spacing025: $spacing * 0.25;
-$spacing0125: $spacing * 0.125;
-
 
 /* 
  * VARIABLES - Font-Size
@@ -94,13 +62,6 @@ $fs_huge: 48px;
 $fs_l: 20px;
 $fs_m: 16px;
 $fs_s: 12px;
-
-
-
-
-
-
-
 
 
 
@@ -170,41 +131,12 @@ transition: all 0.4s linear;
 
 
 
-
-/* LAYOUT RELATED */
-
-
-/* creatte extend sor mixins for css transitions of all types, generiucally bg color transoition for buttons, etc, and then maybe stuff for the forms hover and active */
-
-/* MIXINS */
-
-@mixin paddingh($paddingh) {
-	padding-left: $paddingh;
-	padding-right: $paddingh;
-	}
-
-@mixin paddingv($paddingv) {
-	padding-top: $paddingv;
-	padding-bottom: $paddingv;
-	}
-
-
-
-/* SPACINGS */
-
-@mixin spacing($anyth)  {
-	margin-bottom: $baseSpacing x $anyth;
-	}
-
-
-
-
-
-
-
-
-
 /* CREATE MIXIN for rem fontsize and px fallback solution */
+
+
+
+// create mixin - CSS_FALLBACK_tricks - LINK - the RGB fallback color only works when using shorthand. 
+
 
 
 
