Added "fork me on github" banner

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -100,28 +100,6 @@ img {
 /* 1a TIPUS ESPECIAL */
 /* BASE per tota la web / text menys important */
 /* 1a TIPUS ESPECIAL */
-/* EXTENDS AND PLACEHOLDERS */
-/* centered, paddingh, paddingv, etc */
-/* LAYOUT RELATED */
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_sass_style\.scss}line{font-family:\00003100}}
-.centered, .container_content {
-  /* display: block; */
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_sass_style\.scss}line{font-family:\00003106}}
-.fullwidth {
-  float: none;
-  width: 100%;
-}
-
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_sass_style\.scss}line{font-family:\00003111}}
-.clearfix {
-  /* MUST CRETAE THIS ONE BETTER !!!!!!!!!!!!!!!!!!!!!!! */
-  overflow: hidden;
-}
-
 /* CREATE MIXIN for rem fontsize and px fallback solution */
 /* CSS Document - SASS */
 /* Front-End */
@@ -142,24 +120,56 @@ img {
 /* ====================================================================================================================== */
 /* TYPOGRAPHY                                                                                                             */
 /* ====================================================================================================================== */
+/* 
+ * SASS - VARIABLES - FONTS - "IMPORT" GOOGLE FONTS
+ */
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000350}}
+::-webkit-input-placeholder {
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000351}}
+::-moz-placeholder {
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000352}}
+:-ms-input-placeholder {
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000353}}
+input:-moz-placeholder {
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
 /*  TEXT: FONTS (font-face declarations) ======================== */
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000316}}
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000363}}
 html, body {
   color: #000;
   /* default */
   /* font-family: '$fontfamily1' ;*/
-  font-family: "Raleway", sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 400;
   background-color: white;
   font-size: 16px;
   /* line-height: $spacing; */
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000328}}
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000378}}
 p {
   margin-bottom: 24px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000336}}
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000386}}
 a,
 a:visited,
 a:hover {
@@ -169,7 +179,7 @@ a:hover {
 }
 
 /*  Typography - Headers ======================== */
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000346}}
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000396}}
 h1, h2, h3, h4, h5, h6 {
   /*
   font-family: Tahoma, Geneva, sans-serif;
@@ -179,7 +189,7 @@ h1, h2, h3, h4, h5, h6 {
   /* letter-spacing: -1px; */
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000355}}
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\00003105}}
 h1 {
   /* font-family: Arial, Helvetica, sans-serif; */
   /*
@@ -215,13 +225,13 @@ h5 {font-size:1.25rem;
 	margin-bottom:1.25em;
 	}
 */
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\0000392}}
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\00003142}}
 h6 {
   /* font-size:1rem;  */
 }
 
 /* METER AQUI LO DEL CODE TAG !!!!!!!!!!!! */
-@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\00003116}}
+@media -sass-debug-info{filename{font-family:file\:\/\/E\:\/wamp\/www\/carl_github\/cowo-Sass\/assets\/scss\/base\/_typography\.scss}line{font-family:\00003166}}
 pre {
     /*
 	-webkit-box-sizing: border-box; // Safari/Chrome, other WebKit
