--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,10 +1,11 @@
 /*
- * Project : cowo-Sass
+ * Author: Carl Johansson @carlwebdev
+ * Project: cowo-Sass
  * File: GLOBAL
  */
 
-/* SASS, COMPASS AND SUZY STUFF */
-/* @import "compass/css3"; */
+/* COMPASS */
+@import "compass/css3";
 
 /* BASE */
 @import "base/reset";
