--- a/assets/scss/base/_sass_layout.scss
+++ b/assets/scss/base/_sass_layout.scss
@@ -1,11 +1,8 @@
-/* CSS Document - SASS */
-/* Front-End */
-
-
-
-
-/* LAYOUT RELATED */
-
+/*
+ * Author: Carl Johansson @carlwebdev
+ * Project: cowo-Sass
+ * File: Sass layout
+ */
 
 
 /* 
@@ -42,6 +39,20 @@ $spacing0125: $spacing * 0.125;
 
 
 
+/* 
+ * MIXINS - LAYOUT - Responsive
+ */
+@mixin centered { 
+  margin-left: auto;
+  margin-right: auto;
+  }                 
+@mixin fullwidth { 
+  float: none; 
+  width: 100%;
+  }
+	
+	
+	
 @mixin paddingh($paddingh) {
 	padding-left: $paddingh;
 	padding-right: $paddingh;
@@ -54,6 +65,18 @@ $spacing0125: $spacing * 0.125;
 
 
 
+/* START - CLEARFIX */ /* apply clearfix to parent */
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
+	}
+* html .clearfix             { zoom: 1; } /* IE6 */
+*:first-child+html .clearfix { zoom: 1; } /* IE7 */
+/*/END - CLEARFIX */
 
 
 
