--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,8 +1,8 @@
-/* CSS Document - FRONT-END */
-
-/* ====================================================================================================================== */
-/* TYPOGRAPHY                                                                                                             */
-/* ====================================================================================================================== */
+/*
+ * Author: Carl Johansson @carlwebdev
+ * Project: cowo-Sass
+ * File: Typography
+ */
 
 
 /* 
@@ -61,16 +61,8 @@
 
 
 html, body {
-    color:#000; /* default */
-    /* font-family: '$fontfamily1' ;*/
-    // @include font0;
-		
-		@include f_main;
-		
-	background-color: $color1;
-	font-size: 16px;
-	/* line-height: $spacing; */    
-    }
+	@include f_main;  
+  }
 
 
 
@@ -86,82 +78,13 @@ a:visited,
 a:hover {
 	text-decoration:none; 
 	color:#000; 
-	/* font-weight:bold; */
 	}
 	
 
-
-/*  Typography - Headers ======================== */
-
-h1, h2, h3, h4, h5, h6 {
-/*
-font-family: Tahoma, Geneva, sans-serif;
-font-weight : normal;
-margin-top: 0px;
-*/
-/* letter-spacing: -1px; */
-}
-
-h1 {
-	// font-size:4rem;
-	/* font-family: Arial, Helvetica, sans-serif; */
-	/*
-	line-height:1.4;
-	color:#000;
-	margin-bottom:0.2em;
-	*/
-	}
-
-/*
-h2 {font-size:2.5rem;
-	line-height:1.2;
-	color: #222;
-	margin-bottom:.5em;
-	margin-top:.5em;
-	}
-
-h3 {font-size : 1.75rem;
-	line-height : 1.3; 
-	color: #333;
-	margin-bottom : 0.3em;
-	letter-spacing: -1px;
-	}
-
-h4 {font-size:1.5rem;
-	line-height:1.25; 
-	color:#444;
-	margin-bottom:0.5em;
-	}
-
-h5 {font-size:1.25rem; 
-	color:#555;
-	margin-bottom:1.25em;
-	}
-*/
-
-h6 {
-	/* font-size:1rem;  */
-	// color:#666;
-	}
-	
-h6 {
-	// font-size: $fontsizeMedium; 
-	}
-	
-	
-		
-		
-		
-		
-		
-		
-		
 
 
 
 /* METER AQUI LO DEL CODE TAG !!!!!!!!!!!! */
-
-
 
 pre {
  // color: #fff;   
