--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,38 +1,38 @@
-/* CSS Document - FRONT-END */
-
-		
-		
-/* ====================================================================================================================== */
-/* LAYOUT SECTION - HEADER                                                                                          */
-/* ====================================================================================================================== */
+/*
+ * Author: Carl Johansson @carlwebdev
+ * Project: cowo-Sass
+ * File: Header
+ */
 	
 header {
-	padding: $spacing025;
-	}
-
-	#headerContent {
+	
+	.inner {
+		padding: $spacing025; 
+		@include paddingv($spacing05);
+		overflow:hidden;
 		position:relative;
 		}
+	
+	} // header
+	
 
-		#weblogo {
-			float:left; /* margin-bottom:50px; */
-			font-size: $fs_huge; 
-			color:#fff;			
+		#main_logo {
+			float:left;
+			font-size: $fs_xxl; 
+			color:#fff;	
+			@include f_roboto_light;		
 			}
-
-				
-				
-				
+			
 		#slogan {
-			position:absolute; bottom:5px; right:0;
+			position:absolute; bottom: $spacing05; right: $spacing025;
 			font-size: $fs_l; 
 			color:#fff;	
 			
+			span {}
+			
 			a {
-				color:#fff;
-								
-				&:hover {text-decoration: underline;}
-				
+				color: inherit; // sass for inherit color !!!!!!!!	 NOT, but this new thing is very useful !!!! in sass environments 	
+				&:hover {color: $c_accent;}
 				}					
 
 			} // slogan
@@ -42,15 +42,28 @@ header {
 					
 @media only screen and (max-width: $bp_m) { 
 
-	#weblogo {
+	#main_logo {
 		float:none;
 		text-align:center;
 		}
 	#slogan {
 		position:relative;
-		text-align:center;		
-		}
-		
-		
+		text-align:center;
+		bottom: $spacing0125;						
+		} // slogan
+
 					
 } // MEDIA-QUERY		
+
+
+
+@media only screen and (max-width: $bp_s) { 
+
+	#slogan {
+
+			span {display: block;}
+								
+		} // slogan
+		
+					
+} // MEDIA-QUERY	
