--- a/assets/scss/base/_sass_style.scss
+++ b/assets/scss/base/_sass_style.scss
@@ -12,6 +12,9 @@
 
 $c_white: #fff; /* white */
 $c_primary: #673AB7; // PRIMARY COLOR
+$c_primary_dark: #512DA8; // PRIMARY COLOR
+
+
 $c_accent: #E040FB;
 
 $c_text: #212121;
