--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -81,7 +81,10 @@ a:hover {
 	}
 	
 
-
+h1, h2 {
+	font-weight: normal;
+	font-weight: 300; // light
+	}
 
 
 /* METER AQUI LO DEL CODE TAG !!!!!!!!!!!! */
