--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -19,7 +19,8 @@ footer {
 
 
 		.footerContent {
-			font-size: $fs_l;
+			// font-size: $fs_l;
+			font-size: $fs_m;
 			
 			span {font-size: $fs_m;}
 			
